--- a/output/index.html
+++ b/output/index.html
@@ -10,6 +10,10 @@
   <body>
     <p id="demo"></p>
     <p id="name"></p>
-    <script src="js/bundle.js"></script>
+    <script src="assets/js/bundle.js"></script>
+    <img src="assets/images/img1.jpg" height="200px" />
+    <img src="assets/images/img2.jpg" height="200px" />
+    <img src="assets/images/img3.png" height="200px" />
+    <img src="assets/images/img4.png" height="200px" />
   </body>
 </html>
