--- a/src/index.html
+++ b/src/index.html
@@ -11,5 +11,7 @@
     <p id="demo"></p>
     <p id="name"></p>
     <script src="js/bundle.js"></script>
+    <img src="assest/images/img1.jpg" height="200px" />
+    <img src="assest/images/img2.jpg" height="200px" />
   </body>
 </html>
