--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,8 @@
   <body>
     <p id="demo"></p>
     <p id="name"></p>
-    <script src="js/bundle.js"></script>
-    <img src="assest/images/img1.jpg" height="200px" />
-    <img src="assest/images/img2.jpg" height="200px" />
+    <script src="assets/js/bundle.js"></script>
+    <img src="assets/images/img1.jpg" height="200px" />
+    <img src="assets/images/img2.jpg" height="200px" />
   </body>
 </html>
